Fix css not showing bug
- before encoding sha256 by 'fingerprint' function, minify first

 non-related mods:
  - gh-page yml
  - head.html
  - adfit sytle

--- a/assets/css/common/main.css
+++ b/assets/css/common/main.css
@@ -7,7 +7,8 @@
 }
 .grid-container {
     display:grid;
-    grid-template-columns: auto;
+    grid-template-columns: 200px auto;
+    -ms-grid-column-align: left;
     grid-gap: 10px;
 }
 .page-header h1 {
